--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -24,7 +24,7 @@
     justify-content: left;
     align-items: center;
 }
-li{
+.li{
     list-style: none;
     list-style-type: none;
     text-decoration: none;
@@ -268,7 +268,7 @@ text-transform: capitalize;
     margin-top: 14px;
 }
 .content-reg{
-    margin: 150px 69px;
+    margin: 250px 69px;
 }
 .btn-sec{
     margin-top: 74px;
@@ -325,3 +325,93 @@ text-transform: capitalize;
     align-items: center;
     width: 100%;
 }
+
+.home{
+    width: 100%;
+}
+.content-home{
+    width: 70%;
+    margin: 250px auto;
+}
+
+/* side-bar   ----start */
+.sidebar{
+width: 57px;
+height: 100%;
+background: #5861AE 0% 0% no-repeat padding-box;
+
+}
+
+.side-list{
+    padding-top:20px ;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: center;
+
+}
+
+
+.side-item1{ 
+background: transparent url('./img/home-run\ \(1\).png') 0% 0% no-repeat padding-box; 
+}
+
+.side-item2{
+    
+background: transparent url('./img/more.png') 0% 0% no-repeat padding-box; 
+background-color: #ecedf0; 
+
+}
+.side-item3{
+    background: transparent url('./img/list.png') 0% 0% no-repeat padding-box;   
+}
+
+.side-item{
+    list-style: none;
+    width: 22px;
+    height: 22px;
+    margin: 20px auto;
+}
+
+/* create --start */
+
+.create{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 800px;
+
+}
+.create-right{
+    width: 95%;
+}
+
+.search-bar{
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    margin-top: 39px;
+    align-items: center;
+}
+.field-search{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.field-search label{
+    width: 14px;
+height: 15px;
+background: transparent url('./img/search.png') 0% 0% no-repeat padding-box;
+}
+.search-line{
+    margin-top: 10px;
+}
+
+
+.create-sec{
+    margin: 150px auto ;
+    text-align: center;
+}
+
