--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -337,7 +337,8 @@ text-transform: capitalize;
 /* side-bar   ----start */
 .sidebar{
 width: 57px;
-height: 100%;
+height: 800px;
+
 background: #5861AE 0% 0% no-repeat padding-box;
 
 }
@@ -379,7 +380,6 @@ background-color: #ecedf0;
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 800px;
 
 }
 .create-right{
@@ -415,3 +415,152 @@ background: transparent url('./img/search.png') 0% 0% no-repeat padding-box;
     text-align: center;
 }
 
+/* option page */
+
+.table{
+    width: 90%;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: black;
+    height: 50px;
+    padding: 0px 20px;
+    margin-top: 50px;
+    text-align: center;
+}
+
+.table h3{
+    text-align: left;
+font: normal normal 600 16px/48px ;
+letter-spacing: 0px;
+color: #FFFFFF;
+}
+.product-type{
+    width: 300px;
+}
+
+.Wash-type{
+    width: 500px;
+}
+.quantity{
+    width: 100px;
+}
+.price{
+    width: 150px;
+}
+.other{
+    width: 100px;
+}
+
+.product-type img{
+    width :30px
+}
+
+.data{
+    width: 90%;
+    margin:  0px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px; 
+    height: 70px;
+    border: 2px solid rgba(238, 229, 229, 0.7);
+}
+
+/* thead{
+    background: black;
+    color: white;
+    height: 50px;   
+}
+
+th{
+    width: 100px;
+}  */
+
+/* thead{
+    background: black;
+    color: white;
+    height: 50px;   
+} */
+
+.product-list{
+    border-collapse: collapse;
+
+}
+
+.Wash-type-section{
+    width: 500px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.quantity-input{
+    width: 80%;
+    margin: 0px auto;
+    border: 2px solid #b1b3c5;
+    padding: .25rem .5rem;
+}
+
+
+
+.Wash-type-section div{
+    width: 25px;
+    height: 29px;
+}
+
+
+.normal1{
+ 
+    background: transparent url('./img/washing-machine.png') 0% 0% no-repeat padding-box;
+}
+.blue1{
+    background: transparent url('img/washing-machine-blue.png') 0% 0% no-repeat padding-box;
+}
+.normal2{
+ 
+    background: transparent url('./img/ironing.png') 0% 0% no-repeat padding-box;
+}
+.blue2{
+    background: transparent url('img/ironing-blue.png') 0% 0% no-repeat padding-box;
+}
+.normal3{
+ 
+    background: transparent url('./img/towel.png') 0% 0% no-repeat padding-box;
+}
+.blue3{
+    background: url('img/towel.blue.png') ;
+    background-size: cover;
+    background-position: center;
+}.normal4{
+ 
+    background: transparent url('./img/bleach.png') 0% 0% no-repeat padding-box;
+}
+.blue4{
+    background: transparent url('img/bleach-blue.png') 0% 0% no-repeat padding-box;
+}
+
+
+.product-type{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-img{
+    width: 45px;
+}
+.confirm{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+
+.btn-reset{
+    padding: .25rem .5rem;
+}
+
+.btn-confirm{
+    background-color: #5861AE;
+    color: white;
+}
