--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -53,7 +53,7 @@
 
 .right-login{
     width: 710px;
-    height: 769px;
+    height: 680px;
     background: #B9C0FD1A 0% 0% no-repeat padding-box;
 }
 
@@ -69,12 +69,14 @@
 
 .form-login h3{
  text-align: left;
-font: normal normal medium 32px/60px ;
+font-size:  32px ;
 letter-spacing: 1.28px;
 color: #4552C1;
 text-transform: uppercase;
 margin-bottom: 50px;
 font-size: 32px;
+font-weight: normal;
+
 }
 
 label{
@@ -125,7 +127,7 @@ color: #5861AE;
 
 .left-login{
     width: 730px;
-    height: 769px;
+    height: 680px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
 }
 
@@ -252,7 +254,7 @@ margin-bottom: 14px;
 
 .left-reg{
     width: 402px;
-    height: 769px;
+    height: 680px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
 }
 
@@ -282,15 +284,22 @@ text-transform: capitalize;
 
 .right-reg{
     width: 1250px;
-    height: 769px;
+    height: 680px;
     background: #B9C0FD1A 0% 0% no-repeat padding-box;
 }
 
 
 .form-login{
-    margin: 45px auto ;
+    /* margin: 45px auto ; */
     text-align: center;
+    /* width: 90%; */
+}
+
+.form-reg{
     width: 90%;
+    margin: 45px auto ;
+
+
 }
 
 .division{
