--- a/front-end/src/ordersComponent/modal.css
+++ b/front-end/src/ordersComponent/modal.css
@@ -3,17 +3,17 @@
     position: fixed;
     background: #00000050;
     width: 100%;
-    height: 120vh;
+    height: 100vh;
     top: 0px;
     right: 0;
+    overflow: scroll;
   } 
   
   .box {
     position: relative;
     width: 60%;
     margin-left: auto;
-    /* height: 100vh; */
-    min-height: 100vh;
+    height: 100%;
     background: #fff;
     border-radius: 4px;
     border: 1px solid #999;
@@ -67,9 +67,9 @@
   display: flex;
   align-items: center;
   justify-content: right;
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
-  left: 0;
+  left: 0; */
 
  }
  .con-firm{
