--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -104,11 +104,11 @@ input{
     font: normal normal 600 17px/27px ;
     letter-spacing: 0.6px;
     color: #424548; 
-    background: #B9C0FD1A 0% 0% no-repeat padding-box;
+    background: #f8f9ff 0% 0% no-repeat padding-box;
 }
 
 .under-line{
-    height: 1px ;
+    height: 2px ;
     background-color: #5861AE;
 }
 
@@ -356,7 +356,7 @@ text-transform: capitalize;
 /* side-bar   ----start */
 .sidebar{
 width: 57px;
-height: 800px;
+height: 712px;
 
 background: #5861AE 0% 0% no-repeat padding-box;
 
@@ -412,6 +412,7 @@ align-items: center;
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 85vh;
 
 }
 .create-right{
@@ -593,10 +594,12 @@ th{
     display: flex;
     align-items: center;
     justify-content: right;
+    height: 70px;
 }
 
 .btn-reset{
     padding: .25rem .5rem;
+    margin: 0%;
 }
 
 .btn-confirm{
@@ -675,4 +678,13 @@ color: #4552C1;
 
 .field input{
     font-size: 16px;
+}
+.Total-Price{
+    color: #5861AE;
+    font-size: 18px;
+    font-weight: bold;
+}
+input[type='checkbox']{
+  width: 20px;
+  height: 20px;
 }
